hphp/hack/test/typecheck/override_abstract_concrete.php.exp
File "override_abstract_concrete.php", line 7, characters 16-16:
Class D does not correctly implement all required methods  (Typing[4142])
File "override_abstract_concrete.php", line 7, characters 26-26:
Some methods are incompatible with those declared in type C
Read the following to see why:
File "override_abstract_concrete.php", line 8, characters 28-28:
Member f has the wrong type
File "override_abstract_concrete.php", line 8, characters 28-28:
Cannot re-declare this method as abstract
File "override_abstract_concrete.php", line 4, characters 19-19:
Previously defined here
